mycc.output
No terminales inútiles en la gramática

   L
   M
   N


Terminales no usados en la gramática

   AR


Reglas inútiles en la gramática

   59 L: %empty

   60 M: %empty

   61 N: %empty


Estado 52 conflictos: 18 desplazamiento/reducción
Estado 53 conflictos: 18 desplazamiento/reducción
Estado 54 conflictos: 18 desplazamiento/reducción
Estado 55 conflictos: 18 desplazamiento/reducción
Estado 76 conflictos: 18 desplazamiento/reducción
Estado 77 conflictos: 18 desplazamiento/reducción
Estado 78 conflictos: 18 desplazamiento/reducción
Estado 79 conflictos: 18 desplazamiento/reducción
Estado 80 conflictos: 18 desplazamiento/reducción
Estado 81 conflictos: 18 desplazamiento/reducción
Estado 82 conflictos: 18 desplazamiento/reducción
Estado 83 conflictos: 18 desplazamiento/reducción
Estado 84 conflictos: 18 desplazamiento/reducción
Estado 85 conflictos: 18 desplazamiento/reducción
Estado 86 conflictos: 18 desplazamiento/reducción
Estado 94 conflictos: 18 desplazamiento/reducción
Estado 95 conflictos: 18 desplazamiento/reducción
Estado 96 conflictos: 18 desplazamiento/reducción
Estado 97 conflictos: 18 desplazamiento/reducción
Estado 98 conflictos: 18 desplazamiento/reducción
Estado 99 conflictos: 18 desplazamiento/reducción
Estado 100 conflictos: 18 desplazamiento/reducción
Estado 101 conflictos: 18 desplazamiento/reducción
Estado 102 conflictos: 18 desplazamiento/reducción
Estado 103 conflictos: 18 desplazamiento/reducción
Estado 104 conflictos: 18 desplazamiento/reducción
Estado 105 conflictos: 18 desplazamiento/reducción
Estado 106 conflictos: 18 desplazamiento/reducción
Estado 107 conflictos: 18 desplazamiento/reducción
Estado 108 conflictos: 18 desplazamiento/reducción
Estado 109 conflictos: 18 desplazamiento/reducción
Estado 110 conflictos: 18 desplazamiento/reducción
Estado 111 conflictos: 18 desplazamiento/reducción
Estado 118 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: stmts $end

    1 stmts: stmts stmt
    2      | %empty

    3 stmt: ';'
    4     | expr ';'
    5     | IF '(' expr ')' stmt
    6     | IF '(' expr ')' stmt ELSE stmt
    7     | WHILE '(' expr ')' stmt
    8     | DO stmt WHILE '(' expr ')' ';'
    9     | FOR '(' expr ';' expr ';' expr ')' stmt
   10     | RETURN expr ';'
   11     | BREAK ';'
   12     | '{' stmts '}'
   13     | error ';'

   14 expr: ID '=' expr
   15     | ID PA expr
   16     | ID NA expr
   17     | ID TA expr
   18     | ID DA expr
   19     | ID MA expr
   20     | ID AA expr
   21     | ID XA expr
   22     | ID OA expr
   23     | ID LA expr
   24     | ID RA expr
   25     | expr OR expr
   26     | expr AN expr
   27     | expr '|' expr
   28     | expr '^' expr
   29     | expr '&' expr
   30     | expr EQ expr
   31     | expr NE expr
   32     | expr '<' expr
   33     | expr '>' expr
   34     | expr LE expr
   35     | expr GE expr
   36     | expr LS expr
   37     | expr RS expr
   38     | expr '+' expr
   39     | expr '-' expr
   40     | expr '*' expr
   41     | expr '/' expr
   42     | expr '%' expr
   43     | '!' expr
   44     | '~' expr
   45     | '+' expr
   46     | '-' expr
   47     | '(' expr ')'
   48     | '$' INT8
   49     | PP ID
   50     | NN ID
   51     | ID PP
   52     | ID NN
   53     | ID
   54     | INT8
   55     | INT16
   56     | INT32
   57     | FLT
   58     | STR


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 43
'$' (36) 48
'%' (37) 42
'&' (38) 29
'(' (40) 5 6 7 8 9 47
')' (41) 5 6 7 8 9 47
'*' (42) 40
'+' (43) 38 45
'-' (45) 39 46
'/' (47) 41
';' (59) 3 4 8 9 10 11 13
'<' (60) 32
'=' (61) 14
'>' (62) 33
'^' (94) 28
'{' (123) 12
'|' (124) 27
'}' (125) 12
'~' (126) 44
error (256) 13
ID (258) 14 15 16 17 18 19 20 21 22 23 24 49 50 51 52 53
INT8 (259) 48 54
INT16 (260) 55
INT32 (261) 56
FLT (262) 57
STR (263) 58
BREAK (264) 11
DO (265) 8
ELSE (266) 6
FOR (267) 9
IF (268) 5 6
RETURN (269) 10
WHILE (270) 7 8
PA (271) 15
NA (272) 16
TA (273) 17
DA (274) 18
MA (275) 19
AA (276) 20
XA (277) 21
OA (278) 22
LA (279) 23
RA (280) 24
OR (281) 25
AN (282) 26
EQ (283) 30
NE (284) 31
LE (285) 34
GE (286) 35
LS (287) 36
RS (288) 37
AR (289)
PP (290) 49 51
NN (291) 50 52


No terminales con las reglas donde aparecen

$accept (56)
    en la izquierda: 0
stmts (57)
    en la izquierda: 1 2, en la derecha: 0 1 12
stmt (58)
    en la izquierda: 3 4 5 6 7 8 9 10 11 12 13, en la derecha: 1 5
    6 7 8 9
expr (59)
    en la izquierda: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
    30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 58, en la derecha: 4 5 6 7 8 9 10 14 15 16
    17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 44 45 46 47


Estado 0

    0 $accept: . stmts $end

    $default  reduce usando la regla 2 (stmts)

    stmts  ir al estado 1


Estado 1

    0 $accept: stmts . $end
    1 stmts: stmts . stmt

    $end    desplazar e ir al estado 2
    error   desplazar e ir al estado 3
    ID      desplazar e ir al estado 4
    INT8    desplazar e ir al estado 5
    INT16   desplazar e ir al estado 6
    INT32   desplazar e ir al estado 7
    FLT     desplazar e ir al estado 8
    STR     desplazar e ir al estado 9
    BREAK   desplazar e ir al estado 10
    DO      desplazar e ir al estado 11
    FOR     desplazar e ir al estado 12
    IF      desplazar e ir al estado 13
    RETURN  desplazar e ir al estado 14
    WHILE   desplazar e ir al estado 15
    PP      desplazar e ir al estado 16
    NN      desplazar e ir al estado 17
    ';'     desplazar e ir al estado 18
    '('     desplazar e ir al estado 19
    '{'     desplazar e ir al estado 20
    '+'     desplazar e ir al estado 21
    '-'     desplazar e ir al estado 22
    '!'     desplazar e ir al estado 23
    '~'     desplazar e ir al estado 24
    '$'     desplazar e ir al estado 25

    stmt  ir al estado 26
    expr  ir al estado 27


Estado 2

    0 $accept: stmts $end .

    $default  aceptar


Estado 3

   13 stmt: error . ';'

    ';'  desplazar e ir al estado 28


Estado 4

   14 expr: ID . '=' expr
   15     | ID . PA expr
   16     | ID . NA expr
   17     | ID . TA expr
   18     | ID . DA expr
   19     | ID . MA expr
   20     | ID . AA expr
   21     | ID . XA expr
   22     | ID . OA expr
   23     | ID . LA expr
   24     | ID . RA expr
   51     | ID . PP
   52     | ID . NN
   53     | ID .

    PA   desplazar e ir al estado 29
    NA   desplazar e ir al estado 30
    TA   desplazar e ir al estado 31
    DA   desplazar e ir al estado 32
    MA   desplazar e ir al estado 33
    AA   desplazar e ir al estado 34
    XA   desplazar e ir al estado 35
    OA   desplazar e ir al estado 36
    LA   desplazar e ir al estado 37
    RA   desplazar e ir al estado 38
    PP   desplazar e ir al estado 39
    NN   desplazar e ir al estado 40
    '='  desplazar e ir al estado 41

    $default  reduce usando la regla 53 (expr)


Estado 5

   54 expr: INT8 .

    $default  reduce usando la regla 54 (expr)


Estado 6

   55 expr: INT16 .

    $default  reduce usando la regla 55 (expr)


Estado 7

   56 expr: INT32 .

    $default  reduce usando la regla 56 (expr)


Estado 8

   57 expr: FLT .

    $default  reduce usando la regla 57 (expr)


Estado 9

   58 expr: STR .

    $default  reduce usando la regla 58 (expr)


Estado 10

   11 stmt: BREAK . ';'

    ';'  desplazar e ir al estado 42


Estado 11

    8 stmt: DO . stmt WHILE '(' expr ')' ';'

    error   desplazar e ir al estado 3
    ID      desplazar e ir al estado 4
    INT8    desplazar e ir al estado 5
    INT16   desplazar e ir al estado 6
    INT32   desplazar e ir al estado 7
    FLT     desplazar e ir al estado 8
    STR     desplazar e ir al estado 9
    BREAK   desplazar e ir al estado 10
    DO      desplazar e ir al estado 11
    FOR     desplazar e ir al estado 12
    IF      desplazar e ir al estado 13
    RETURN  desplazar e ir al estado 14
    WHILE   desplazar e ir al estado 15
    PP      desplazar e ir al estado 16
    NN      desplazar e ir al estado 17
    ';'     desplazar e ir al estado 18
    '('     desplazar e ir al estado 19
    '{'     desplazar e ir al estado 20
    '+'     desplazar e ir al estado 21
    '-'     desplazar e ir al estado 22
    '!'     desplazar e ir al estado 23
    '~'     desplazar e ir al estado 24
    '$'     desplazar e ir al estado 25

    stmt  ir al estado 43
    expr  ir al estado 27


Estado 12

    9 stmt: FOR . '(' expr ';' expr ';' expr ')' stmt

    '('  desplazar e ir al estado 44


Estado 13

    5 stmt: IF . '(' expr ')' stmt
    6     | IF . '(' expr ')' stmt ELSE stmt

    '('  desplazar e ir al estado 45


Estado 14

   10 stmt: RETURN . expr ';'

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 46


Estado 15

    7 stmt: WHILE . '(' expr ')' stmt

    '('  desplazar e ir al estado 47


Estado 16

   49 expr: PP . ID

    ID  desplazar e ir al estado 48


Estado 17

   50 expr: NN . ID

    ID  desplazar e ir al estado 49


Estado 18

    3 stmt: ';' .

    $default  reduce usando la regla 3 (stmt)


Estado 19

   47 expr: '(' . expr ')'

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 50


Estado 20

   12 stmt: '{' . stmts '}'

    $default  reduce usando la regla 2 (stmts)

    stmts  ir al estado 51


Estado 21

   45 expr: '+' . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 52


Estado 22

   46 expr: '-' . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 53


Estado 23

   43 expr: '!' . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 54


Estado 24

   44 expr: '~' . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 55


Estado 25

   48 expr: '$' . INT8

    INT8  desplazar e ir al estado 56


Estado 26

    1 stmts: stmts stmt .

    $default  reduce usando la regla 1 (stmts)


Estado 27

    4 stmt: expr . ';'
   25 expr: expr . OR expr
   26     | expr . AN expr
   27     | expr . '|' expr
   28     | expr . '^' expr
   29     | expr . '&' expr
   30     | expr . EQ expr
   31     | expr . NE expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . LE expr
   35     | expr . GE expr
   36     | expr . LS expr
   37     | expr . RS expr
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr

    OR   desplazar e ir al estado 57
    AN   desplazar e ir al estado 58
    EQ   desplazar e ir al estado 59
    NE   desplazar e ir al estado 60
    LE   desplazar e ir al estado 61
    GE   desplazar e ir al estado 62
    LS   desplazar e ir al estado 63
    RS   desplazar e ir al estado 64
    ';'  desplazar e ir al estado 65
    '|'  desplazar e ir al estado 66
    '^'  desplazar e ir al estado 67
    '&'  desplazar e ir al estado 68
    '<'  desplazar e ir al estado 69
    '>'  desplazar e ir al estado 70
    '+'  desplazar e ir al estado 71
    '-'  desplazar e ir al estado 72
    '*'  desplazar e ir al estado 73
    '/'  desplazar e ir al estado 74
    '%'  desplazar e ir al estado 75


Estado 28

   13 stmt: error ';' .

    $default  reduce usando la regla 13 (stmt)


Estado 29

   15 expr: ID PA . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 76


Estado 30

   16 expr: ID NA . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 77


Estado 31

   17 expr: ID TA . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 78


Estado 32

   18 expr: ID DA . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 79


Estado 33

   19 expr: ID MA . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 80


Estado 34

   20 expr: ID AA . expr

    ID     desplazar e ir al estado 4
    INT8   desplazar e ir al estado 5
    INT16  desplazar e ir al estado 6
    INT32  desplazar e ir al estado 7
    FLT    desplazar e ir al estado 8
    STR    desplazar e ir al estado 9
    PP     desplazar e ir al estado 16
    NN     desplazar e ir al estado 17
    '('    desplazar e ir al estado 19
    '+'    desplazar e ir al estado 21
    '-'    desplazar e ir al estado 22
    '!'    desplazar e ir al estado 23
    '~'    desplazar e ir al estado 24
    '$'    desplazar e ir al estado 25

    expr  ir al estado 81


Estado 35

   21 expr: ID XA . expr
